syntax = "proto3";

package clients;

option go_package = "github.com/vancelongwill/_examples/fullproto/clients";

message Client {
  string  id          = 1;
  int32   version     = 2;
  string  name        = 3;
  bool    active      = 4;
  int64   created_at  = 5;
  int64   updated_at  = 6;
  string  created_by  = 7;
  string  modified_by = 8;
}